--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "first Boolean exercise involving the use of expressJS",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js",
+    "watch": "node --watch app.js"
   },
   "keywords": [
     "express",
